<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="pref_sql_host">Servidor</string>
    <string name="pref_sql_host_summ">Dirección del servidor</string>
    <string name="pref_sql_port">Puerto</string>
    <string name="pref_sql_user">Usuario</string>
    <string name="pref_sql_password">Contraseña</string>
    <string name="pref_sql_sbname">Base de datos</string>
    <string name="pref_sql_database">Base de datos</string>
    <string name="connectionSQLerror">xxx</string>
    <string name="errorSQLconnection">Falló la conexión con el servidor SQL</string>
    <string name="action_delete">Eliminar</string>
    <string name="out_office">Fuera de la oficina</string>
    <string name="pref_sql_host_remote_summ">Servidor remoto</string>
    <string name="btn_sync">Sincronizar</string>
    <string name="btn_entradas_previstas">Entradas Previstas</string>
    <string name="btn_entradas_libres">Entradas Libres</string>
    <string name="btn_expediciones">Expediciones</string>
    <string name="pref_last_sync">Sincronizado</string>
    <string name="pref_hard_sync">Intervalo Hard Sync(Segs.)</string>
    <string name="pref_soft_sync">Intervalo Soft Sync(Segs.)</string>
    <string name="title_activity_barcode_reader">Barcode Reader</string>
    <string name="title_activity_expediciones">Expediciones</string>
    <string name="msg_tipo_incorrecto">El número de serie no corresponde con el artículo seleccionado</string>
    <string name="msg_articulo_escaneado">Este artículo ya está escaneado</string>
    <string name="title_activity_search">Buscador</string>
    <string name="title_activity_asignar_transporte">Asignar Transporte</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="action_db_rebuild">Regenerar bd</string>
    <string name="action_soft_sync">Soft sync</string>
    <string name="title_activity_recepciones">Recepciones</string>
    <string name="title_activity_mov_articulo_serie_detail">Detalle movimiento</string>
    <string name="title_activity_mov_articulo_serie">Mov. Series</string>
    <string name="status_sync_previsto">PREVISTO</string>
    <string name="status_sync_pend_importar">PENDIENTE IMPORTAR</string>
    <string name="status_sync_importando">IMPORTANDO</string>
    <string name="status_sync_escaneado">ESCANEADO</string>
    <string name="status_sync_exportando">EXPORTANDO</string>
    <string name="status_sync_exportado">EXPORTADO</string>
    <string name="status_sync_sync_saica">SINCRONIZADO CON SAICA</string>
    <string name="status_sync_para_crear">PARA CREAR</string>
    <string name="status_sync_not_insql">NO EN SQL</string>
    <string name="app_label">Stock Control</string>
    <string name="search_hint">Buscar...</string>
    <string name="emptyListView">No hay datos</string>

</resources>
