<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_sql_host"
        android:title="@string/pref_sql_host"
        android:summary="@string/pref_sql_host_summ"
        android:defaultValue="@string/pref_sql_host" />
    <EditTextPreference
        android:key="pref_sql_host_remote"
        android:title="Servidor remoto"
        android:summary="@string/pref_sql_host_remote_summ"
        android:defaultValue="@string/pref_sql_host"/>
    <EditTextPreference
        android:key="pref_sql_port"
        android:title="@string/pref_sql_port"
        android:inputType="number"
        android:defaultValue="1433" />
    <EditTextPreference
        android:key="pref_sql_user"
        android:title="@string/pref_sql_user" />
    <EditTextPreference
        android:key="pref_sql_password"
        android:title="@string/pref_sql_password"
        android:inputType="textPassword"
        android:password="true"/>
    <EditTextPreference
        android:key="pref_sql_database"
        android:title="@string/pref_sql_database" />
    <CheckBoxPreference
        android:key="pref_out_office"
        android:title="Fuera de la oficina"
        android:defaultValue="false"
        android:summaryOff="Conecta con servidor local"
        android:summaryOn="Conecta con servidor remoto"/>
    <EditTextPreference
        android:key="pref_last_sync"
        android:inputType="datetime"
        android:title="@string/pref_last_sync" />
</PreferenceScreen>
